Added basic splash activity and a login activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">ex nihilo</string>
+    <string name="app_name">creatio ex nihilo</string>
+    <string name="login_with_google">Log in with Google</string>
 </resources>
