--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">creatio ex nihilo</string>
-    <string name="login_with_google">Log in with Google</string>
+    <string name="login_with_google">Login with Google</string>
+    <string name="setup_profile">Setup Profile</string>
+    <string name="edit_text_username_hint">Username</string>
+    <string name="finished_registering">Continue</string>
+    <string name="upload_image">Upload Image</string>
 </resources>
